@@ -48,7 +48,10 @@
 	float radDeltaX;
 	
 }
+/** creates an OrbitCamera action with radius, delta-radius,  z, deltaZ, x, deltaX */
 +(id) actionWithDuration:(float) t radius:(float)r deltaRadius:(float) dr angleZ:(float)z deltaAngleZ:(float)dz angleX:(float)x deltaAngleX:(float)dx;
+/** initializes an OrbitCamera action with radius, delta-radius,  z, deltaZ, x, deltaX */
 -(id) initWithDuration:(float) t radius:(float)r deltaRadius:(float) dr angleZ:(float)z deltaAngleZ:(float)dz angleX:(float)x deltaAngleX:(float)dx;
+/** positions the camera according to spherical coordinates */
 -(void) sphericalRadius:(float*) r zenith:(float*) zenith azimuth:(float*) azimuth;
 @end
